# pytrade

./: .gitignore  INSTALLATION.md  LICENSE  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  test_system.py
examples/: quick_start.py
src/: __init__.py  backtest.py  data.py  indicators.py  risk_management.py  signals.py
