[tool.poetry]
name = "pytrade"
version = "0.1.0"
description = "Daily actionable trading system using breakouts, FVG, EMAs & VWAP"
authors = ["Nick Moore <nick.moore@pm.me>"]
readme = "README.md"
packages = []  # optional: add later if you create src/pytrade/

[tool.poetry.dependencies]
python = ">=3.10"          # lowered from 3.14 → most people don't have 3.14 yet; adjust if you really need it
pyyaml = "^6.0.3"
requests = "^2.32"
pandas = "^2.2"
numpy = "^2.0"
yfinance = "^0.2"
tabulate = "^0.9"
tqdm = "^4.66"
matplotlib = "^3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
